Basic layout and FontAwesome import

--- a/assets/stylesheets/scss/_partials/_variables.scss
+++ b/assets/stylesheets/scss/_partials/_variables.scss
@@ -82,7 +82,7 @@ $containerp:  0 40px 0 30px; // Padding on .container element (Usually same left
 
 // Grid Options //
 
-$gridlist: ('five' 5 10px 12px) ('ten' 10 20px 50px); // First Number in parenthasis is number of Columns, second number is gutter width in that specific grid
+$gridlist: ('seven' 7 40px 20px) ('three' 3 20px 10px); // First Number in parenthasis is number of Columns, second number is gutter width in that specific grid
 
 $rowmargin:   0 0; // Margin on rows
 $rowpadding:  8px 0 0 0; // Padding on rows
