--- a/assets/stylesheets/scss/_partials/_layout.scss
+++ b/assets/stylesheets/scss/_partials/_layout.scss
@@ -58,12 +58,6 @@
 }
 
 
-.container {
-  margin: 0 auto;
-  padding: $containerp;
-  max-width: $contentw;
-}
-
 .row {
   @extend %clearfix;
   
@@ -72,6 +66,11 @@
     float: left;
     line-height: 1.4em;
   }
+}
+
+.inner-grid {
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
 // Overall Layout Elements //
