Museo Slab and customized CSS

--- a/assets/stylesheets/scss/_partials/_variables.scss
+++ b/assets/stylesheets/scss/_partials/_variables.scss
@@ -12,10 +12,8 @@
 $maincolor:     #79ca32;
 $darkcolor:     #212f36;
 
-$bannerbg:      #29363d;
+$bannerbg:      #1b2634;
 $bannercolor:   white;
-$statusbg:      $maincolor; //tint($bannerbg,40%);
-$statuscolor:   $bannerbg;
                 
 $title:         $bannerbg;
 $textcolor:     #333333;
