--- a/assets/stylesheets/scss/_partials/_fonts.scss
+++ b/assets/stylesheets/scss/_partials/_fonts.scss
@@ -1,3 +1,5 @@
+/* Museo Sans */
+  
 @font-face {
     font-family: 'museo_sans';
     src: url('../fonts/museo-sans/museosans-100-webfont.eot');
@@ -10,7 +12,7 @@
 }
 
 @font-face {
-    font-family: 'museo_sans100_italic';
+    font-family: 'museo_sans';
     src: url('../fonts/museo-sans/museosans-100italic-webfont.eot');
     src: url('../fonts/museo-sans/museosans-100italic-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/museo-sans/museosans-100italic-webfont.woff') format('woff'),
@@ -32,7 +34,7 @@
 }
 
 @font-face {
-    font-family: 'museo_sans300_italic';
+    font-family: 'museo_sans';
     src: url('../fonts/museo-sans/museosans-300italic-webfont.eot');
     src: url('../fonts/museo-sans/museosans-300italic-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/museo-sans/museosans-300italic-webfont.woff') format('woff'),
@@ -49,19 +51,19 @@
          url('../fonts/museo-sans/museosans-500-webfont.woff') format('woff'),
          url('../fonts/museo-sans/museosans-500-webfont.ttf') format('truetype'),
          url('../fonts/museo-sans/museosans-500-webfont.svg#museo_sans500') format('svg');
-    font-weight: 500;
+    font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'museo_sans500_italic';
+    font-family: 'museo_sans';
     src: url('../fonts/museo-sans/museosans-500italic-webfont.eot');
     src: url('../fonts/museo-sans/museosans-500italic-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/museo-sans/museosans-500italic-webfont.woff') format('woff'),
          url('../fonts/museo-sans/museosans-500italic-webfont.ttf') format('truetype'),
          url('../fonts/museo-sans/museosans-500italic-webfont.svg#museo_sans500_italic') format('svg');
     font-weight: normal;
-    font-style: normal;
+    font-style: italic;
 }
 
 @font-face {
@@ -76,7 +78,7 @@
 }
 
 @font-face {
-    font-family: 'museo_sans700_italic';
+    font-family: 'museo_sans';
     src: url('../fonts/museo-sans/museosans-700italic-webfont.eot');
     src: url('../fonts/museo-sans/museosans-700italic-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/museo-sans/museosans-700italic-webfont.woff') format('woff'),
@@ -98,12 +100,38 @@
 }
 
 @font-face {
-    font-family: 'museo_sans900_italic';
+    font-family: 'museo_sans';
     src: url('../fonts/museo-sans/museosans-900italic-webfont.eot');
     src: url('../fonts/museo-sans/museosans-900italic-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/museo-sans/museosans-900italic-webfont.woff') format('woff'),
          url('../fonts/museo-sans/museosans-900italic-webfont.ttf') format('truetype'),
          url('../fonts/museo-sans/museosans-900italic-webfont.svg#museo_sans900_italic') format('svg');
+    font-weight: 900;
+    font-style: italic;
+}
+
+/* Museo Slab */
+
+@font-face {
+    font-family: 'museo_slab';
+    src: url('../fonts/museo-slab/Museo_Slab_500_2-webfont.eot');
+    src: url('../fonts/museo-slab/Museo_Slab_500_2-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/museo-slab/Museo_Slab_500_2-webfont.woff') format('woff'),
+         url('../fonts/museo-slab/Museo_Slab_500_2-webfont.ttf') format('truetype'),
+         url('../fonts/museo-slab/Museo_Slab_500_2-webfont.svg#museo_sans100') format('svg');
     font-weight: normal;
+    
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'museo_slab';
+    src: url('../fonts/museo-slab/Museo_Slab_500italic-webfont.eot');
+    src: url('../fonts/museo-slab/Museo_Slab_500italic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/museo-slab/Museo_Slab_500italic-webfont.woff') format('woff'),
+         url('../fonts/museo-slab/Museo_Slab_500italic-webfont.ttf') format('truetype'),
+         url('../fonts/museo-slab/Museo_Slab_500italic-webfont.svg#museo_sans100_italic') format('svg');
+    font-weight: normal;
+    font-style: italic;
+}
+
