Give Kudos modal

--- a/assets/stylesheets/scss/styles.scss
+++ b/assets/stylesheets/scss/styles.scss
@@ -41,3 +41,31 @@ div[class^="col-"], div[class*=" col-"] {
 body {
   font-family: "museo_sans", Arial, Helvetica, sans-serif;
 }
+
+/* Radio Buttons */
+
+.selection {
+  display: block;
+  @extend %clearfix;
+}
+
+label.styled-radio {
+  float: left;
+  width: 45%;
+  margin: 10px 2.5%;
+  display: inline-block;
+  
+  input {
+    display: none;
+    
+    + span {
+      display: block;
+      padding: 10px;
+      border: 1px solid transparent;
+    }
+    
+    &:checked + span {
+      border: 1px solid red;
+    }
+  }
+}
