--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -72,84 +72,18 @@
   src: url("../fonts/museo-slab/Museo_Slab_500italic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/museo-slab/Museo_Slab_500italic-webfont.woff") format("woff"), url("../fonts/museo-slab/Museo_Slab_500italic-webfont.ttf") format("truetype"), url("../fonts/museo-slab/Museo_Slab_500italic-webfont.svg#museo_sans100_italic") format("svg");
   font-weight: normal;
   font-style: italic; }
-.btn {
-  -webkit-transition: all 300ms ease;
-  -moz-transition: all 300ms ease;
-  -ms-transition: all 300ms ease;
-  transition: all 300ms ease;
-  -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
-  -ms-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
-  /*--------------
-       Active
-  ---------------*/ }
-  .btn:hover {
-    background-color: #79ca32;
-    -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
-    -ms-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
-    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15); }
-  .btn:focus {
-    color: #fff; }
-  .btn.primary {
-    background-color: #6db62d;
-    color: #fff; }
-    .btn.primary:hover {
-      background-color: #79ca32; }
-    .btn.primary:focus {
-      background-color: #61a128; }
-  .btn.secondary {
-    background-color: #79ca32;
-    color: #fff; }
-  .btn.auxiliary {
-    background-color: #4a555c;
-    color: #fff; }
-  .btn.auxiliary:hover, .btn.auxiliary.ui-state-default:hover {
-    background-color: #556066;
-    color: #fff; }
-  .btn.simple {
-    background-color: #fff;
-    color: #666666; }
-  .btn:active, .btn.active:active {
-    background-color: #61a128;
-    background-image: '';
-    color: #fff;
-    -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.19);
-    -moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.19);
-    box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.19); }
-  .btn.simple:active {
-    background-color: #fff;
-    color: #444444;
-    border: 1px solid #444444;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none; }
-  .btn.active {
-    background-color: #79ca32;
-    background-image: none;
-    -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.19);
-    -moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.19);
-    box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.19);
-    color: rgba(0, 0, 0, 0.8); }
-  .btn.active:hover {
-    background-color: #61a128;
-    background-image: none;
-    color: rgba(0, 0, 0, 0.8); }
-  .btn.active:active {
-    background-color: #79ca32;
-    background-image: none; }
-  .btn.primary:active {
-    background-color: #79ca32;
-    color: #fff;
-    -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.15);
-    box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.15); }
-  .btn.no-style, .btn.no-style:hover {
-    -webkit-box-shadow: 0 0 0 transparent;
-    -moz-box-shadow: 0 0 0 transparent;
-    -ms-box-shadow: 0 0 0 transparent;
-    box-shadow: 0 0 0 transparent; }
+.selection:after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.btn.primary {
+  background-color: #6db62d;
+  color: #fff; }
+  .btn.primary:hover {
+    background-color: #79ca32; }
+  .btn.primary:focus {
+    background-color: #61a128; }
 
 nav.navbar {
   height: 95px;
@@ -262,3 +196,21 @@ div[class^="col-"], div[class*=" col-"] {
 /* Overwrite body font */
 body {
   font-family: "museo_sans", Arial, Helvetica, sans-serif; }
+
+/* Radio Buttons */
+.selection {
+  display: block; }
+
+label.styled-radio {
+  float: left;
+  width: 45%;
+  margin: 10px 2.5%;
+  display: inline-block; }
+  label.styled-radio input {
+    display: none; }
+    label.styled-radio input + span {
+      display: block;
+      padding: 10px;
+      border: 1px solid transparent; }
+    label.styled-radio input:checked + span {
+      border: 1px solid red; }
