--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -147,25 +147,26 @@
 
 .message-item:before {
   background: #fff;
-  border-radius: 2px;
-  bottom: -30px;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+  bottom: -22px;
   content: "";
   height: 100%;
   left: -30px;
   position: absolute;
-  width: 3px; }
+  width: 2px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  border-radius: 2px; }
 
 .message-item:after {
-  background: #fff;
-  border: 2px solid #ccc;
+  border: 2px solid #fff;
   border-radius: 50%;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   content: "";
   height: 15px;
   left: -36px;
   position: absolute;
-  top: 10px;
+  top: 2px;
   width: 15px; }
 
 .clearfix:before, .clearfix:after {
@@ -174,8 +175,40 @@
 
 .bkgd-login {
   background: #1b2934;
-  width: 100%;
   height: 300px; }
+
+.login-wrapper {
+  transform: translateY(-15%);
+  max-width: 980px; }
+  .login-wrapper .panel {
+    border: none;
+    overflow: hidden;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.3);
+    -ms-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.3); }
+  .login-wrapper .panel-body {
+    padding: 0; }
+  .login-wrapper .col-left {
+    background-color: #247ba0;
+    min-height: 460px;
+    padding: 45px 55px;
+    background-image: url(../images/DHS_logo_10.png);
+    background-repeat: no-repeat;
+    background-size: 500px;
+    background-position: -90px -90px;
+    color: #fff; }
+  .login-wrapper .col-right {
+    background-color: #f7f7f7;
+    min-height: 460px;
+    padding: 45px 55px; }
+
+.m-t {
+  margin-top: 20px; }
 
 html,
 body,
