--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -1,3 +1,4 @@
+/* Museo Sans */
 @font-face {
   font-family: 'museo_sans';
   src: url("../fonts/museo-sans/museosans-100-webfont.eot");
@@ -5,7 +6,7 @@
   font-weight: 100;
   font-style: normal; }
 @font-face {
-  font-family: 'museo_sans100_italic';
+  font-family: 'museo_sans';
   src: url("../fonts/museo-sans/museosans-100italic-webfont.eot");
   src: url("../fonts/museo-sans/museosans-100italic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/museo-sans/museosans-100italic-webfont.woff") format("woff"), url("../fonts/museo-sans/museosans-100italic-webfont.ttf") format("truetype"), url("../fonts/museo-sans/museosans-100italic-webfont.svg#museo_sans100_italic") format("svg");
   font-weight: 100;
@@ -17,7 +18,7 @@
   font-weight: 300;
   font-style: normal; }
 @font-face {
-  font-family: 'museo_sans300_italic';
+  font-family: 'museo_sans';
   src: url("../fonts/museo-sans/museosans-300italic-webfont.eot");
   src: url("../fonts/museo-sans/museosans-300italic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/museo-sans/museosans-300italic-webfont.woff") format("woff"), url("../fonts/museo-sans/museosans-300italic-webfont.ttf") format("truetype"), url("../fonts/museo-sans/museosans-300italic-webfont.svg#museo_sans300_italic") format("svg");
   font-weight: 300;
@@ -26,14 +27,14 @@
   font-family: 'museo_sans';
   src: url("../fonts/museo-sans/museosans-500-webfont.eot");
   src: url("../fonts/museo-sans/museosans-500-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/museo-sans/museosans-500-webfont.woff") format("woff"), url("../fonts/museo-sans/museosans-500-webfont.ttf") format("truetype"), url("../fonts/museo-sans/museosans-500-webfont.svg#museo_sans500") format("svg");
-  font-weight: 500;
+  font-weight: normal;
   font-style: normal; }
 @font-face {
-  font-family: 'museo_sans500_italic';
+  font-family: 'museo_sans';
   src: url("../fonts/museo-sans/museosans-500italic-webfont.eot");
   src: url("../fonts/museo-sans/museosans-500italic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/museo-sans/museosans-500italic-webfont.woff") format("woff"), url("../fonts/museo-sans/museosans-500italic-webfont.ttf") format("truetype"), url("../fonts/museo-sans/museosans-500italic-webfont.svg#museo_sans500_italic") format("svg");
   font-weight: normal;
-  font-style: normal; }
+  font-style: italic; }
 @font-face {
   font-family: 'museo_sans';
   src: url("../fonts/museo-sans/museosans-700-webfont.eot");
@@ -41,7 +42,7 @@
   font-weight: 700;
   font-style: normal; }
 @font-face {
-  font-family: 'museo_sans700_italic';
+  font-family: 'museo_sans';
   src: url("../fonts/museo-sans/museosans-700italic-webfont.eot");
   src: url("../fonts/museo-sans/museosans-700italic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/museo-sans/museosans-700italic-webfont.woff") format("woff"), url("../fonts/museo-sans/museosans-700italic-webfont.ttf") format("truetype"), url("../fonts/museo-sans/museosans-700italic-webfont.svg#museo_sans700_italic") format("svg");
   font-weight: 700;
@@ -53,89 +54,72 @@
   font-weight: 900;
   font-style: normal; }
 @font-face {
-  font-family: 'museo_sans900_italic';
+  font-family: 'museo_sans';
   src: url("../fonts/museo-sans/museosans-900italic-webfont.eot");
   src: url("../fonts/museo-sans/museosans-900italic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/museo-sans/museosans-900italic-webfont.woff") format("woff"), url("../fonts/museo-sans/museosans-900italic-webfont.ttf") format("truetype"), url("../fonts/museo-sans/museosans-900italic-webfont.svg#museo_sans900_italic") format("svg");
+  font-weight: 900;
+  font-style: italic; }
+/* Museo Slab */
+@font-face {
+  font-family: 'museo_slab';
+  src: url("../fonts/museo-slab/Museo_Slab_500_2-webfont.eot");
+  src: url("../fonts/museo-slab/Museo_Slab_500_2-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/museo-slab/Museo_Slab_500_2-webfont.woff") format("woff"), url("../fonts/museo-slab/Museo_Slab_500_2-webfont.ttf") format("truetype"), url("../fonts/museo-slab/Museo_Slab_500_2-webfont.svg#museo_sans100") format("svg");
   font-weight: normal;
   font-style: normal; }
-.btn {
-  -webkit-transition: all 300ms ease;
-  -moz-transition: all 300ms ease;
-  -ms-transition: all 300ms ease;
-  transition: all 300ms ease;
-  -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
-  -ms-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
-  /*--------------
-       Active
-  ---------------*/ }
-  .btn:hover {
-    background-color: #79ca32;
-    -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
-    -ms-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
-    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15); }
-  .btn:focus {
-    color: #fff; }
-  .btn.primary {
-    background-color: #6db62d;
-    color: #fff; }
-    .btn.primary:hover {
-      background-color: #79ca32; }
-    .btn.primary:focus {
-      background-color: #61a128; }
-  .btn.secondary {
-    background-color: #79ca32;
-    color: #fff; }
-  .btn.auxiliary {
-    background-color: #4a555c;
-    color: #fff; }
-  .btn.auxiliary:hover, .btn.auxiliary.ui-state-default:hover {
-    background-color: #556066;
-    color: #fff; }
-  .btn.simple {
-    background-color: #fff;
-    color: #666666; }
-  .btn:active, .btn.active:active {
-    background-color: #61a128;
-    background-image: '';
-    color: #fff;
-    -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.19);
-    -moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.19);
-    box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.19); }
-  .btn.simple:active {
-    background-color: #fff;
-    color: #444444;
-    border: 1px solid #444444;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none; }
-  .btn.active {
-    background-color: #79ca32;
-    background-image: none;
-    -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.19);
-    -moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.19);
-    box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.19);
-    color: rgba(0, 0, 0, 0.8); }
-  .btn.active:hover {
-    background-color: #61a128;
-    background-image: none;
-    color: rgba(0, 0, 0, 0.8); }
-  .btn.active:active {
-    background-color: #79ca32;
-    background-image: none; }
-  .btn.primary:active {
-    background-color: #79ca32;
-    color: #fff;
-    -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.15);
-    box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.15); }
-  .btn.no-style, .btn.no-style:hover {
-    -webkit-box-shadow: 0 0 0 transparent;
-    -moz-box-shadow: 0 0 0 transparent;
-    -ms-box-shadow: 0 0 0 transparent;
-    box-shadow: 0 0 0 transparent; }
+@font-face {
+  font-family: 'museo_slab';
+  src: url("../fonts/museo-slab/Museo_Slab_500italic-webfont.eot");
+  src: url("../fonts/museo-slab/Museo_Slab_500italic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/museo-slab/Museo_Slab_500italic-webfont.woff") format("woff"), url("../fonts/museo-slab/Museo_Slab_500italic-webfont.ttf") format("truetype"), url("../fonts/museo-slab/Museo_Slab_500italic-webfont.svg#museo_sans100_italic") format("svg");
+  font-weight: normal;
+  font-style: italic; }
+.selection:after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.btn.primary {
+  background-color: #6db62d;
+  color: #fff; }
+  .btn.primary:hover {
+    background-color: #79ca32; }
+  .btn.primary:focus {
+    background-color: #61a128; }
+
+nav.navbar {
+  height: 95px;
+  background: #1b2634 url(../images/DHS_logo_10.png) no-repeat -40px -40px;
+  background-size: 174.8px;
+  color: white; }
+  nav.navbar h3 {
+    margin: 0 0 0 0;
+    line-height: 45px;
+    font-weight: 500;
+    font-size: .85em;
+    color: #a4a8ae; }
+  nav.navbar h1 {
+    margin: -0.25em 0 0 0;
+    font-family: "museo_slab", Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    font-size: 2.2em;
+    line-height: 1em; }
+  nav.navbar .navbar-nav {
+    margin: 25.5px 0 0 0;
+    line-height: 45px; }
+    nav.navbar .navbar-nav .dropdown a.dropdown-toggle {
+      height: 45px;
+      line-height: 45px;
+      padding: 0 15px;
+      background: none;
+      color: white; }
+      nav.navbar .navbar-nav .dropdown a.dropdown-toggle i {
+        font-size: 1.5em;
+        margin-left: 5px;
+        position: relative;
+        top: 0.1em; }
+      nav.navbar .navbar-nav .dropdown a.dropdown-toggle:hover {
+        color: #a4a8ae; }
+    nav.navbar .navbar-nav .dropdown.open a.dropdown-toggle i:before {
+      content: '\f106'; }
 
 /*--------------
     Login
@@ -210,16 +194,13 @@
 .m-t {
   margin-top: 20px; }
 
+/* Layout to allow tab content scroll */
 html,
 body,
 .container,
 .row,
 div[class^="col-"], div[class*=" col-"] {
   height: 100%; }
-
-nav.navbar {
-  height: 95px;
-  overflow: hidden; }
 
 .container.main {
   height: -moz-calc(100% - 135px);
@@ -244,5 +225,27 @@ nav.navbar {
   height: -webkit-calc(100% - 45px);
   height: calc(100% - 45px);
   overflow-y: auto; }
+
+/* Overwrite body font */
+body {
+  font-family: "museo_sans", Arial, Helvetica, sans-serif; }
+
+/* Radio Buttons */
+.selection {
+  display: block; }
+
+label.styled-radio {
+  float: left;
+  width: 45%;
+  margin: 10px 2.5%;
+  display: inline-block; }
+  label.styled-radio input {
+    display: none; }
+    label.styled-radio input + span {
+      display: block;
+      padding: 10px;
+      border: 1px solid transparent; }
+    label.styled-radio input:checked + span {
+      border: 1px solid red; }
 
 /*# sourceMappingURL=styles.css.map */
