--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -161,6 +161,11 @@ nav.navbar {
   width: 100%;
   height: 300px; }
 
+.profile {
+  height: 180px; }
+  .profile .row .row {
+    height: auto; }
+
 /* Layout to allow tab content scroll */
 html,
 body,
@@ -197,7 +202,7 @@ div[class^="col-"], div[class*=" col-"] {
 body {
   font-family: "museo_sans", Arial, Helvetica, sans-serif; }
 
-/* Radio Buttons */
+/* Modal Styling */
 .selection {
   display: block; }
 
