--- a/assets/stylesheets/scss/_partials/_buttons.scss
+++ b/assets/stylesheets/scss/_partials/_buttons.scss
@@ -1,4 +1,7 @@
 .btn {
+    min-width: 160px;
+    height: 35px;
+    @include borderradius(35px);
 
   &:hover {
   }
@@ -18,4 +21,10 @@
       background-color: darken($primary,10%);
     }
   }
+}
+
+
+.btn-primary {
+    background-color: #f25f5c;
+    border-color: #f25f5c;
 }
